--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-slideshow-image": "^3.4.6",
     "react-transition-group": "^4.4.1",
     "simple-react-lightbox": "^3.6.6",
     "styled-components": "^5.3.0",
